# ds-search-api

./: .dockerignore  .flake8  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
.github/actions/docker-build/: action.yml
.github/actions/get-version-tag/: action.yml
.github/workflows/: cd.yml  remove-untagged.yml
app/: __init__.py
app/articles/: __init__.py  routes.py  schemas.py
app/lib/: __init__.py  api.py  cache.py  cache_key_prefix.py
app/main/: routes.py
app/records/: __init__.py  routes.py  schemas.py
app/records/schemas/: __init__.py  details.py  record.py  records_response.py  search.py
app/schemas/: __init__.py  api_response.py  api_result.py  common_search_api.py  filter.py
app/sources/: __init__.py  api.py  discovery.py  rosetta.py  website.py
app/sources/rosetta/: __init__.py  api.py
app/sources/rosetta/lib/: __init__.py  response_parser.py
