[tool.poetry]
name = "ds-etna-search"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
requests = "^2.31.0"
flask-caching = "^2.1.0"
flask-swagger = "^0.2.14"
flask-swagger-ui = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
include = '\.pyi?$'
