[tool.poetry]
name = "ds-etna-search"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
requests = "^2.31.0"
fastapi = "^0.110.0"
pyquery = "^2.0.0"
pydash = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
